--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio - Home</title>
   <link href="base.css" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 
 </head>
 <body>
@@ -25,8 +26,29 @@
       <p>Outside of coding, I enjoy exploring new ideas, learning about emerging technologies, and collaborating with others on creative projects. I believe in continuous learning and personal growth, and I’m committed to challenging myself every step of the way.</p>
 
       <h3>What I Do</h3>
-      <p>I specialize in building responsive and accessible web pages using foundational web technologies such as HTML, CSS, and JavaScript. Through hands-on practice and real-world projects, I am strengthening my technical skills and becoming proficient in front-end development.</p>
-      <p>This portfolio is a part of my journey with ALX, where I’m learning to think critically, solve complex problems, and develop scalable software. I look forward to contributing to innovative teams and turning ideas into reality through code.</p>
+<p>
+  I specialize in building responsive and accessible web pages using core technologies like HTML, CSS, and JavaScript.
+  Through the ALX Software Engineering program, I’ve gained a strong foundation in front-end development and
+  professional practices in tech.
+</p>
+
+<p>
+  So far, we've covered:
+  <ul>
+    <li><strong>Professional Development in Tech</strong> – focusing on mindset, communication, and productivity in the tech space.</li>
+    <li><strong>Git & GitHub</strong> – using version control tools for collaboration, mastering branching, merging, and pull requests.</li>
+    <li><strong>UI/UX Design</strong> – understanding user needs and designing intuitive, user-friendly interfaces.</li>
+    <li><strong>HTML & CSS</strong> – creating structured, styled web pages with best practices in layout and design.</li>
+    <li><strong>JavaScript (Intro)</strong> – learning core programming concepts such as variables, functions, control flow, and the DOM.</li>
+    <li><strong>Leveraging AI for Learning</strong> – using AI tools effectively to debug, study smarter, and boost productivity (e.g., prompt engineering and prompt cheatsheets).</li>
+  </ul>
+</p>
+
+<p>
+  This portfolio showcases some of my hands-on work and growth as a developer. I’m passionate about technology and
+  committed to continuous learning. My goal is to contribute to innovative teams and bring real-world solutions to life through code.
+</p>
+
 
       <a href="https://www.alxafrica.com" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
@@ -66,11 +88,12 @@
           </tr>
         </tbody>
       </table>
+      <p>
+        If you would like to get in touch, feel free to reach out via email at
+        <a href="rodneybaloyi31@gmail.com">rodneybaloyi31@gmail.com</a>.
+      </p>
     </article>
-
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
+    <aside>I will use this later, if not deleted. Just wanted the display properties to be visible</aside>
   </main>
 
   <footer>
