--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Tweets</title>
+  <link href="base.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -16,7 +19,7 @@
   <main>
     <article>
       <h1>Recent Tweet</h1>
-
+      <p>Here’s a recent tweet from ALX that inspires me on my tech journey:</p>
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">
           We don’t just dream of a better future. We build it.<br><br>
@@ -26,13 +29,8 @@
         &mdash; ALX (@alx_africa)
       </blockquote>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
       <p><a href="index.html">← Back to Home</a></p>
     </article>
-
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
   </main>
 
   <footer>
